      - extended the number of clips that can be assigned to toolbars (total now of 60 clips supported)
      - Accessibility improvements:
          - add abiity to highlight the widget with current focus (Thanks BeckyEbook)
          - add ability to double text insertion point width throughout Sigil

    Bug Fixes
      - reformating css with multiline now adds space after selector comma
      - add in bulk resource move and use bulk delete to handle epubs with thousands of files
      - add in bulk resource rename to handle epubs with thousands of files
      - if Replace has focus and Find done, CodeView should get focus (Thanks BeckyEbook)
      - fix dark mode Toolbar continuation symbols for Windows (Thank you BeckyEbook)
      - fixed bug in Save-As context menu action in ImageTabs
      - fix dark mode live switching on macOS issues qith QTreeView and QStandardItemModels
      - fix bug in missing CharToEntity in the Create TOC process
      - fix TabManager tab close symbol on macOS to match that used in dockwidgets
      - use Unciode NormalizationForm C inside Sigil and for io
      - fix macOS stuck at Maximized size issue


Sigil-2.1.0
    New Features
      - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
      - add ability to change keyboard focus using keyboard shortcuts or menus
          to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
      - preserve Media Overlay Active Classes when deleting unused classes
      - Goto Link Or Style (or Ctrl-Clicking on a class will now search selectors
          with combinators if nothing found in normal css classes
      - update to a newer Spanish hunspell dictionary
      - overhaul of Building on Linux documentation
      - update 3rdparty zlib to version 1.3.1 for security and other bug fixes
      - update 3rdparty pcre2 to version 10.43 for security and other bug fixes