@@ -51,6 +51,7 @@
 //const QString IDPF_FONT_ALGO_ID          = "http://www.idpf.org/2008/embedding";
 
 const QString PluginRunner::SEP = QString(QChar(31));
+const QString PluginRunner::_RS = QString(QChar(30));
 const QStringList PluginRunner::CHANGESTAGS = QStringList() << "deleted" << "added" << "modified";
 
 
@@ -62,6 +63,7 @@ PluginRunner::PluginRunner(TabManager *tabMgr, QWidget *parent)
       m_pluginName(""),
       m_pluginOutput(""),
       m_algorithm(""),
+      m_fontMangling(""),
       m_result(""),
       m_xhtml_net_change(0),
       m_ready(false)
@@ -75,14 +77,16 @@ PluginRunner::PluginRunner(TabManager *tabMgr, QWidget *parent)
     // set default font obfuscation algorithm to use
     // ADOBE_FONT_ALGO_ID or IDPF_FONT_ALGO_ID ??
     QList<Resource *> fonts = m_book->GetFolderKeeper()->GetResourceListByType(Resource::FontResourceType);
+    QStringList font_extra_info;
     foreach (Resource * resource, fonts) {
         FontResource *font_resource = qobject_cast<FontResource *> (resource);
         QString algorithm = font_resource->GetObfuscationAlgorithm();
         if (!algorithm.isEmpty()) {
-            m_algorithm = algorithm;
-            break;
+            if (m_algorithm.isEmpty()) m_algorithm = algorithm;
+            font_extra_info << font_resource->GetRelativePath() + SEP + algorithm;
         }
     }
+    m_fontMangling = font_extra_info.join(_RS);
 
     // build hashes of href (book root relative path) to resources
     QList<Resource *> resources = m_book->GetFolderKeeper()->GetResourceList();
@@ -253,6 +257,7 @@ void PluginRunner::writeSigilCFG()
         cfg << "NoAutomate";
     }
     cfg << m_mainWindow->AutomatePluginParameter();
+    cfg << m_fontMangling;
     QList <Resource *> selected_resources = m_bookBrowser->AllSelectedResources();
     foreach(Resource * resource, selected_resources) {
         cfg << resource->GetRelativePath();
